--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -123,6 +123,7 @@ body {
         &__staff {
             margin-top: 240px;
             padding-top: 102px;
+            margin-bottom: 107px;
         }
 
         &__label {
