added core section

--- a/assets/scss/_button.scss
+++ b/assets/scss/_button.scss
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     white-space: nowrap;
+    width: min-content;
+    cursor: pointer;
 
     &--sm {
         height: 38px;
